# servant-router

./: .gitignore  README.md  callHackageFix.nix  default.nix  reflex-platform.nix  servant-router.cabal  stack.yaml
examples/reflex/: default.nix  reflex-example.cabal  shell.nix  stack.yaml
examples/reflex/src/: ReflexTest.hs
examples/server/: default.nix  server-example.cabal
examples/server/src/: Server.hs
servant-router/: default.nix  servant-router.cabal
servant-router/src/Servant/: Router.hs
servant-router/test/: Spec.hs
src/Servant/: Router.hs  ServerT.hs
test/: ReflexTest.hs  Server.hs  Spec.hs
