name:                servant-router
version:             0.7.1
synopsis:            Servant router for non-server applications.
description:         Write Servant APIs to be routed without a server.
homepage:            https://github.com/ElvishJerricco/servant-router
license:             BSD3
license-file:        LICENSE
author:              Will Fancher
maintainer:          willfancher38@gmail.com
copyright:           2016 Will Fancher
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Servant.Router
  build-depends:       base           >= 4.8 && < 5
                     , servant        == 0.7.*
                     , text           == 1.2.*
                     , http-api-data  == 0.2.*
                     , http-types     == 0.9.*
                     , network-uri    == 2.6.*
                     , bytestring     == 0.10.*
                     , mtl            == 2.2.*
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite servant-router-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , servant-router
                     , servant
                     , mtl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ElvishJerricco/servant-router
