name:                reflex-example
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable reflex-example
  hs-source-dirs:      src
  main-is:             ReflexTest.hs
  build-depends:       base
                     , servant-router
                     , servant
                     , reflex-dom
                     , reflex-dom-contrib
                     , text
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
