name:                server-example
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable server-example
  hs-source-dirs:      src
  main-is:             Server.hs
  build-depends:       base
                     , servant-router
                     , servant-server
                     , servant-blaze
                     , warp
                     , blaze-html
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
